--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>🪔Diya🪔</title>
     <link href="main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="light">
